implements agent bios